# peer-gemma

./: .gitignore  build_peer_model.py  peer_gemma.py  pyproject.toml  requirements.txt  setup_env.py  train.py
configs/: config_schema.py
configs/data/: c4.py  mock.py  tiny.py
configs/experiment/: dev.py  nscc.py  test.py
configs/model/: gemma_7b.py  small.py  tiny.py
configs/system/: cpu.py  mac.py  nscc.py
configs/training/: full.py  quick.py
data/: data.py  mock_data.py
models/: build_peer_model.py  peer_gemma_lightning.py
